add a tumor classification head

--- a/.gitignore
+++ b/.gitignore
@@ -41,4 +41,7 @@ Data_Pre_Processing/cedars-224/masks*/
 Data_Pre_Processing/cedars-224/tiles*/
 Data_Pre_Processing/cedars-224/prediction/
 Mask_RCNN/logs
+*.icloud
+*.ipynb_checkpoints/
+Mask_RCNN/__pycache__/
 *.h5
